feature2 #header and steps base

--- a/src/styles/_typo.sass
+++ b/src/styles/_typo.sass
@@ -4,7 +4,7 @@
 $roboto: 'Roboto', sans-serif
 $roboto-slab: 'Roboto Slab', serif
 
-#app
+body
     font-family: $roboto
     font-weight: $font-weight-normal
     color: $primary-dark
@@ -64,6 +64,7 @@ $roboto-slab: 'Roboto Slab', serif
 
     // Roboto Regular 15px/25px
     li
+        color: $primary-light
         font-size: $font-size-m
         line-height: $line-height-xl
 
