--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -35,7 +35,17 @@ $primary-dark: #001841
 
 $gray: #4E5156
 $black: #000000
+$white: #FFFFFF
 
 $red: #DB171D
 $orange: #FFAB48
 $yellow: #FFEF63
+
+// ---------------------- ** SPECIFIC COLORS ** ----------------------
+
+$background-home-view: #E5E5E5
+
+// ---------------------- ** SPECIFIC SPACING ** ----------------------
+
+// Home View
+$lateral-padding-home-view: 40px
