--- a/src/styles/_typo.sass
+++ b/src/styles/_typo.sass
@@ -64,9 +64,12 @@ body
 
     // Roboto Regular 15px/25px
     li
-        color: $primary-light
+        color: #9DA2A9
         font-size: $font-size-m
         line-height: $line-height-xl
+
+        & > *
+            color: $primary-dark
 
     //Roboto Slab Regular 16px/14px
     nav
