--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -43,9 +43,21 @@ $yellow: #FFEF63
 
 // ---------------------- ** SPECIFIC COLORS ** ----------------------
 
+// Home View
 $background-home-view: #E5E5E5
+
+// HotelDealCard Component
+$hotel-deal-card-header-line-color: #C9E3F9
 
 // ---------------------- ** SPECIFIC SPACING ** ----------------------
 
 // Home View
 $lateral-padding-home-view: 40px
+
+// Home Header
+$home-header-height: 47px
+
+// HotelDealCard Component
+$hotel-deal-card-height: 490px
+$hotel-deal-card-width: 225px
+$hotel-deal-card-padding: 10px
