--- a/src/styles/_typo.sass
+++ b/src/styles/_typo.sass
@@ -9,6 +9,10 @@ body
     font-weight: $font-weight-normal
     color: $primary-dark
 
+    h1, h2, h3, h4, h5
+        font-weight: $font-weight-normal
+        color: $primary-dark
+
     // Roboto Slab Regular/Bold 24px/30px
     h1
         font-family: $roboto-slab
